apps/config-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-ui
  namespace: pipelineguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - baghguard.com
    secretName: config-ui-tls
  rules:
  - host: baghguard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: config-ui
            port:
              number: 8080
